2018-01-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.1.
	* configure.ac (AC_INIT): Bump version to 1.0.1.

2018-01-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* abort.c: Define GAWKEXTLIB_NOT_NEEDED to eliminate the need for
	gawkextlib.h in the build environment.

2018-01-19         Arnold D. Robbins     <arnold@skeeve.com>

	* doc/abort.3am: Small improvement.

2018-01-12         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* abort.c (do_abort): Clean up a couple of nits.
	* doc/abort.3am: Move misplaced comma.
	* packaging/gawk-abort.spec.in: No useful tests or info to install.
	* m4/gawkext.m4: Restore missing symlink.
	* po/LINGUAS: Restore empty file.

2018-01-08         Arnold D. Robbins     <arnold@skeeve.com>

	* First version.