@@ -1,3 +1,7 @@
+2018-02-13         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* packaging/gawk-abort.spec.in: Upgrade to Fedora standards.
+
 2018-01-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* NEWS: Update for version 1.0.1.
